# xrreader

./: .env.example  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/instructions/: docs-examples.instructions.md
.github/workflows/: ci.yml  typecheck.yml
api/reference/: index.html
contributing/: index.html
design/architecture/: index.html
docs/: index.md
docs/api/: reference.md
docs/design/: architecture.md
docs/notebooks/: example_demo.ipynb
search/: search_index.json
src/xrreader/: __init__.py
src/xrreader/_src/: __init__.py  base.py  cache.py  catalog.py  credentials.py
src/xrreader/_src/aemet/: __init__.py  archive.py  catalog.py  schema.py  source.py
src/xrreader/_src/cds/: __init__.py  archive.py  catalog.py  profiles.py  source.py
src/xrreader/_src/cds/presets/: insitu.py  reanalysis.py
src/xrreader/_src/cmems/: __init__.py  catalog.py  source.py
src/xrreader/_src/cmems/presets/: bgc.py  insitu.py  oc.py  phy.py  ssh.py  sss.py  sst.py
src/xrreader/types/: __init__.py
src/xrreader/types/_src/: __init__.py  geometry.py  request.py  station.py  time.py  validation.py  variable.py
tests/data/: test_adapters.py  test_aemet_archive.py  test_aemet_catalog.py  test_aemet_credentials.py  test_aemet_parsers.py  test_aemet_source.py  test_cache_serialization.py  test_catalog.py  test_cds_credentials.py  test_cds_insitu_archive.py  test_cds_insitu_form.py  test_credentials_cache.py  test_end_to_end.py  test_presets.py  test_review_fixes.py  test_review_migration_fixes.py  test_review_round2.py  test_review_round3.py  test_review_round4.py
tests/types/: test_derived_methods.py  test_geometry_time_levels.py  test_station.py  test_validation.py  test_variables.py
