[project]
name = "xrreader"
version = "0.0.1"
description = "Authenticated archive readers for xarray geodata (CMEMS, CDS, AEMET)."
authors = [
    {name="J. Emmanuel Johnson", email="jemanjohnson34@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["xarray", "earth-science", "data", "cmems", "cds", "era5", "aemet"]
requires-python = ">=3.12"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
# Core stays light: only the typed request vocabulary + base adapter
# surface need these. Service clients (copernicusmarine, cdsapi, httpx,
# geopandas, …) are lazily imported and gated behind the extras below.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "xarray>=2024.10",
]

[project.optional-dependencies]
# ``pip install 'xrreader[cmems]'`` — Copernicus Marine adapter.
cmems = [
    "copernicusmarine>=2.0",
]

# ``pip install 'xrreader[cds]'`` — Climate Data Store gridded reanalysis
# (ERA5). In-situ datasets additionally need the ``cds-insitu`` extra.
# cdsapi is a thin HTTP client, so we also pull a NetCDF backend: CDSSource
# requests NetCDF and reads the cached ``.nc`` back via ``xr.open_dataset``.
cds = [
    "cdsapi>=0.7",
    "netcdf4>=1.6",
]

# ``pip install 'xrreader[cds-insitu]'`` — CDS in-situ surface-land /
# surface-marine adapters + the GeoParquet-backed CDSInsituArchive.
cds-insitu = [
    "cdsapi>=0.7",
    "netcdf4>=1.6",
    "geopandas>=1.1.3",
    "pyarrow>=24.0.0",
    "loguru>=0.7.3",
]

# ``pip install 'xrreader[aemet]'`` — AEMET OpenData adapter + the
# GeoParquet-backed AemetArchive.
aemet = [
    "httpx>=0.28.1",
    "geopandas>=1.1.3",
    "pyarrow>=24.0.0",
    "loguru>=0.7.3",
]

[project.urls]
Repository = "https://github.com/jejjohnson/xrreader"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
    # Exercised by the archive / source tests via lazy imports; the
    # adapters themselves keep these optional (see project extras).
    "httpx>=0.28.1",
    "geopandas>=1.1.3",
    "pyarrow>=24.0.0",
    "loguru>=0.7.3",
    # NetCDF backend for the CDS cache round-trip tests. At runtime the
    # cmems / cds extras pull this transitively via their service client.
    "netcdf4>=1.6",
    # zoneinfo data so tz-aware TimeRange tests resolve named zones in
    # minimal containers (Windows / slim Linux images lack the system db).
    "tzdata>=2024.1",
]
lint = [
    "ruff>=0.15.11",
]
typecheck = [
    "ty>=0.0.31",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-jupyter>=0.26.3",
    "jupytext>=1.19.1",
    "ipykernel>=7.2.0",
    # matplotlib + watermark used by the example notebooks during local
    # re-execution. The guarded watermark cell in each notebook no-ops
    # if the package is missing, but installing it here lets the version
    # readout actually print under `nbconvert --execute`.
    "matplotlib>=3.10.8",
    "watermark>=2.4",
    # pygments 2.20.0 dropped the None -> '' coercion for HtmlFormatter(filename=...),
    # but pymdownx.highlight 10.21.x still passes the untitled-code-block title
    # through as None. Pin until a fixed pymdown-extensions release ships (#38).
    "pygments>=2.19,<2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xrreader"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E402", "E721", "E731", "E741",
    # Geoscience/math docstrings and comments legitimately use en-dashes,
    # multiplication signs, Greek letters, and similar Unicode (e.g.
    # "Brunt–Väisälä", "2 stations × 2 months"). Suppress the
    # ambiguous-character warnings that would force ASCII-ification.
    "RUF002", "RUF003",
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/xrreader --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/xrreader"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
